--- a/index.html
+++ b/index.html
@@ -13,5 +13,71 @@
     </head>
     <body>
       <h1>FBRD Hangouts</h1>
+      <nav class="navbar navbar-inverse justify-content-start align-items-center">
+        <div class="dropdown sign-up">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sign up
+          </button>
+          <p id="message"></p>
+          <form id="sign-up" class="dropdown-menu p-4">
+            <div class="form-group">
+              <label for="dropdownFormUsername">Username</label>
+              <input type="text" class="form-control" name="credentials[email]" placeholder="example@email.com">
+            </div>
+            <div class="form-group">
+              <label for="dropdownFormPassword">Password</label>
+              <input type="password" class="form-control" name="credentials[password]" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="dropdownFormPassword">Confirm Password</label>
+              <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
+            </div>
+            <button type="submit" class="btn btn-primary" value="Sign up">Sign up</button>
+          </form>
+        </div>
+
+        <div class="dropdown sign-in">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sign in
+          </button>
+          <p id="signInMessage"></p>
+          <form id="sign-in" class="dropdown-menu p-4">
+            <div class="form-group">
+              <label for="dropdownFormUsername">Username</label>
+              <input type="text" class="form-control" id="dropdownFormUsername" name="credentials[email]" placeholder="username">
+            </div>
+            <div class="form-group">
+              <label for="dropdownFormPassword">Password</label>
+              <input type="password" class="form-control" name="credentials[password]" placeholder="password">
+            </div>
+            <button type="submit" class="btn btn-primary" value="Sign in">Sign in</button>
+          </form>
+        </div>
+
+        <div class="dropdown change-password">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Change Password
+          </button>
+          <p id="passwordChangeMessage"></p>
+          <form id="change-password" class="dropdown-menu p-4">
+            <div class="form-group">
+              <label for="dropdownFormPassword">Password</label>
+              <input type="text" class="form-control" name="passwords[old]" placeholder="Old password">
+            </div>
+            <div class="form-group">
+              <label for="dropdownFormPassword">Password</label>
+              <input type="password" class="form-control" name="passwords[new]" placeholder="New password">
+            </div>
+            <button type="submit" class="btn btn-primary" value="Change Password">Change Password</button>
+          </form>
+        </div>
+
+        <p id="signOutMessage"></p>
+        <form id="sign-out" class="border justify-content-end">
+            <fieldset>
+              <input type="submit" value="Sign out">
+            </fieldset>
+          </form>
+      </nav>
     </body>
 </html>
