Create Show button with functionality to console.log success message
Created a button on html (bootstrap)
Connected button to event with app.js
Created the event function to make ajax call
Created UI function that just console.logs a message for now

Co-authored-by: Ross Northrup

Related to #3

--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
             </fieldset>
           </form>
       </nav>
+
+        <button id="show-hangs" type="button" class="btn btn-primary">Show all Hangs</button>
+
     </body>
 </html>
