Added handlebars template for show hangs
Created handlebars file for show Hangs
Linked template to index.html
tested show hangs with handlebars

Co-authored-by: Trey Hilson, Ross Northrup, Dan Powers
Related to #9
Related to #3

--- a/index.html
+++ b/index.html
@@ -92,14 +92,19 @@
           <input type="text" name="hang[time]" placeholder="Hang Time">
           <input type="text" name="hang[location]" placeholder="Location">
           <input type="text" name="hang[description]" placeholder="Description">
-        <input type="submit" class="btn-gradient green normal" value="Add Hang!">
+          <input type="submit" class="btn-gradient green normal" value="Add Hang!">
         </fieldset>
 
         <!-- <button id="addHangButton" class="btn-gradient green normal"> Add Hang
         </button> -->
       </form>
-        <button id="show-hangs" type="button" class="btn btn-primary">Show all Hangs</button>
 
+      <button id="show-hangs" type="button" class="btn btn-primary">Show all Hangs</button>
+
+      <main>
+          <!-- add hangs here -->
+        <div id="content" class="content"></div>
+      </main>
 
     </body>
 </html>
