Started building the showMyEvents functions, Dan has a great idea, so we are jumping for him to take lead,
Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Daniel Powers

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
         </button> -->
       </form>
 
-      <button id="show-hangs" type="button" class="btn btn-primary">Show all Hangs</button>
+      <button id="show-hangs" type="button" class="btn btn-primary">Show All Hangs</button>
 
+      <button id="show-my-hangs" type="button" class="btn btn-primary">Show My Hangs</button>
       <main>
+
           <!-- add hangs here -->
         <div id="content" class="content"></div>
       </main>
