--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
       <button id="show-hangs" type="button" class="btn btn-primary">Show All Hangs</button>
 
       <button id="show-my-hangs" type="button" class="btn btn-primary">Show My Hangs</button>
+
+      <button id="show-my-rsvp" type="button" class="btn btn-primary">Show All RSVP hangs</button>
+
       <main>
+
 
           <!-- add hangs here -->
         <div id="content" class="content"></div>
