Cleaned the JS code up
Show/Hide have been appropriately assigned

User Messages for all funcitons

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </form>
         </div>
 
-        <div class="dropdown change-password">
+        <div id="change-password" class="dropdown change-password">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Change Password
           </button>
@@ -78,13 +78,14 @@
             <button type="submit" class="btn btn-sign" value="Change Password">Change Password</button>
           </form>
         </div>
-
-        <p id="signOutMessage"></p>
-        <form id="sign-out" class="border justify-content-end">
+        <div id="sign-out">
+          <p id="signOutMessage"></p>
+          <form id="sign-out" class="border justify-content-end">
             <fieldset>
               <input type="submit" class="btn btn-sign-out" value="Sign out">
             </fieldset>
           </form>
+        </div>
       </nav>
 
 
