RSVP creation Created function to PATCH data to mongoose for storing data into RSVP array. Added forEach events in ui and handlebar template to be called for rsvpHangSuccess
Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Daniel Powers, Ross Northrup

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       <button id="show-hangs" type="button" class="btn btn-hang">Show All Hangs</button>
 
       <button id="show-my-hangs" type="button" class="btn btn-hang">Show My Hangs</button>
+
+      <button id="rsvp-hangs" type="button" class="btn btn-hang rsvp-show">RSVP'd Hangs</button>
       <main>
 
           <!-- For Handlebars Template call -->
