Fixed change-password form reset bug

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             Change Password
           </button>
           <p id="passwordChangeMessage"></p>
-          <form id="change-password" class="dropdown-menu p-4">
+          <form id="change-password2" class="dropdown-menu p-4">
             <div class="form-group">
               <label for="dropdownFormPassword">Password</label>
               <input type="text" class="form-control" name="passwords[old]" placeholder="Old password">
