Fixed Show all for unauth users

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 
       <button id="show-hangs" type="button" class="btn btn-hang">Show All Hangs</button>
 
+      <button id="show-upcoming-hangs" type="button" class="btn btn-hang">Show Upcoming Hangs</button>
+
       <button id="show-my-hangs" type="button" class="btn btn-hang">Show My Hangs</button>
 
       <button id="rsvp-hangs" type="button" class="btn btn-hang rsvp-show">RSVP'd Hangs</button>
